force-app/main/default/objects/BDL_Milestone__c/BDL_Milestone__c.object-meta.xml
<CustomObject>
    <description>Keeping track of important Milestones for Alliances Management. This can be extended to be used for other teams as well. If more sophisticated project management tasks are required, there is Milestones PM on the AppExchange which is free at the time of writing this post.
Demen S. 3rd April 2023.</description>
    <label>BD&amp;L Milestone</label>
    <nameField>
        <label>BD&amp;L Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BD&amp;L Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>