force-app/main/default/objects/BDL_Milestone__c/fields/BDL_Alliance_Project__c.field-meta.xml
<CustomField>
    <fullName>BDL_Alliance_Project__c</fullName>
    <description>MD Relationship.
Demen S. 3rd April 2023.</description>
    <label>Alliance Project</label>
    <referenceTo>BDL_Alliance_Project__c</referenceTo>
    <relationshipLabel>BD&amp;L Milestones</relationshipLabel>
    <relationshipName>BDL_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>