force-app/main/default/objects/BDL_Milestone__c/fields/BDL_Deadline__c.field-meta.xml
<CustomField>
    <fullName>BDL_Deadline__c</fullName>
    <description>The Deadline for this particular Milestone.
Demen S. 3rd April 2023.</description>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>