force-app/main/default/objects/BDL_Milestone__c/fields/BDL_Description__c.field-meta.xml
<CustomField>
    <fullName>BDL_Description__c</fullName>
    <description>Short description for a milestone.
Demen S. 3rd April 2023.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>