force-app/main/default/objects/BDL_Milestone__c/fields/BDL_Extended_Dates__c.field-meta.xml
<CustomField>
    <fullName>BDL_Extended_Dates__c</fullName>
    <description>This field will be used by a flow to move dates for dependent milestones, so it doesn&apos;t have to be done manually 1 by 1. If this isn&apos;t desired, simply disable the flow XXX.
Demen S. 3rd Arpil 2023.</description>
    <inlineHelpText>Number to be entered in Days</inlineHelpText>
    <label>Extend Deadline By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>