force-app/main/default/objects/BDL_Milestone__c/fields/BDL_Kickoff__c.field-meta.xml
<CustomField>
    <fullName>BDL_Kickoff__c</fullName>
    <description>Date a particular milestone will be kicked off.
Demen S. 23rd April 2023.</description>
    <label>Kickoff</label>
    <type>Date</type>
</CustomField>