force-app/main/default/objects/BDL_Milestone__c/fields/BDL_Predecessor_Milestone__c.field-meta.xml
<CustomField>
    <fullName>BDL_Predecessor_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self Relationship to be able to record predecessor milestones and create dependencies.
Demen S. 3rd April 2023.</description>
    <label>Predecessor Milestone</label>
    <referenceTo>BDL_Milestone__c</referenceTo>
    <relationshipLabel>BD&amp;L Milestones</relationshipLabel>
    <relationshipName>Predecessor_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>