force-app/main/default/objects/BDL_Milestone__c/fields/BDL_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>