force-app/main/default/objects/BDL_Milestone__c/fields/BDL_Successor_Milestone__c.field-meta.xml
<CustomField>
    <fullName>BDL_Successor_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self Relationship to be able to record successor milestones and create dependencies.
Demen S. 3rd April 2023.</description>
    <label>Successor Milestone</label>
    <referenceTo>BDL_Milestone__c</referenceTo>
    <relationshipLabel>BD&amp;L Milestones (Successor Milestone)</relationshipLabel>
    <relationshipName>BDL_Successor_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>