force-app/main/default/objects/BDL_Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BDL_Status__c</columns>
    <columns>BDL_Alliance_Project__c</columns>
    <columns>BDL_Kickoff__c</columns>
    <columns>BDL_Deadline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>